feat: complete main func w/ socket and emotions

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,8 @@
 # Application Port - express server listens on this port (default 3000).
 PORT=3000
 
+REDIS_ADAPTER_HOST=localhost
+REDIS_ADAPTER_PORT=6379
+
 EMOTION_ID_LOWER=1
 EMOTION_ID_UPPER=8
