--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\""
     },
     "dependencies": {
+        "@socket.io/redis-adapter": "^7.0.0",
         "dotenv": "8.2.0",
         "errorhandler": "1.5.1",
         "express": "4.17.1",
@@ -27,6 +28,7 @@
         "express-session": "1.17.1",
         "lodash": "^4.17.21",
         "lusca": "1.6.1",
+        "redis": "^3.1.2",
         "socket.io": "^4.1.3",
         "winston": "3.3.3"
     },
@@ -38,6 +40,7 @@
         "@types/lodash": "4.14.168",
         "@types/lusca": "1.6.2",
         "@types/node": "14.14.25",
+        "@types/redis": "^2.8.31",
         "@typescript-eslint/eslint-plugin": "4.14.2",
         "@typescript-eslint/parser": "4.14.2",
         "concurrently": "6.0.2",
