feat: add REDIS_ADAPTER_ENABLE env var

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@
 # Application Port - express server listens on this port (default 3000).
 PORT=3000
 
+REDIS_ADAPTER_ENABLE=false
 REDIS_ADAPTER_HOST=localhost
 REDIS_ADAPTER_PORT=6379
 
